refactor: move uikit/components styles to uikit/blocks

--- a/src/shared/uikit/blocks/_index.scss
+++ b/src/shared/uikit/blocks/_index.scss
@@ -3,3 +3,7 @@
 @forward './Header';
 @forward './Input';
 @forward './KeybindEditBtn';
+@forward './Modal';
+@forward './GameGrid';
+@forward './GameGridCell';
+@forward './StatsScreen';
