tweak some styles

--- a/src/shared/uikit/atomic/atomic.scss
+++ b/src/shared/uikit/atomic/atomic.scss
@@ -25,12 +25,17 @@
   justify-content: center;
 }
 
+.justify-end {
+  justify-content: flex-end;
+}
+
 .mx-auto {
   margin: 0 auto;
 }
 
 .w-full {
-  width: 400px;
+  /* width: 400px; */
+  width: 100%;
 }
 
 .w-xl4 {
@@ -69,6 +74,10 @@
   border-radius: 9999px;
 }
 
+.square {
+  aspect-ratio: 1 / 1;
+}
+
 .border {
   border: 1px solid #ccc;
 }
@@ -79,6 +88,11 @@
 
 .select-none {
   user-select: none;
+}
+
+.disabled {
+  opacity: 0.5;
+  pointer-events: none;
 }
 
 .overflow-hidden {
@@ -95,6 +109,10 @@
 
 .text-left {
   text-align: start;
+}
+
+.text-right {
+  text-align: end;
 }
 
 @for $i from 0 to 20 {
